--- a/sass/content.scss
+++ b/sass/content.scss
@@ -1,52 +1,54 @@
 /*@charset "utf-8";*/
 
 body {
-  -webkit-user-select: text ;
+  -webkit-user-select: text;
   overflow-y: scroll !important ;
-  margin: 0 ;
-  position: relative ;
+  margin: 0;
+  position: relative;
 }
 
 #optionBar {
-  -webkit-user-select: none ;
-  display: block ;
-  position: absolute ;
-  top: 9px ;
-  right: 17px ;
+  -webkit-user-select: none;
+  display: block;
+  position: absolute;
+  top: 9px;
+  right: 17px;
 }
 
-#buttonFormatted, #buttonPlain {
+#buttonFormatted,
+#buttonPlain {
   -webkit-border-radius: 2px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   -webkit-user-select: none;
   background: -webkit-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
   border: 1px solid #aaa;
   color: #444;
-  font-size: 12px ;
+  font-size: 12px;
   margin-bottom: 0px;
   min-width: 4em;
   /*padding: 3px 12px 3px 12px;*/
-  padding: 3px 0 ;
-  position: relative ;
+  padding: 3px 0;
+  position: relative;
   z-index: 10;
-  display: inline-block ;
-  width: 80px ;
-  text-shadow: 1px 1px rgba(255,255,255,0.3) ;
+  display: inline-block;
+  width: 80px;
+  text-shadow: 1px 1px rgba(255, 255, 255, 0.3);
 }
 
 #buttonFormatted {
-  margin-left: 0 ;
-  border-top-left-radius: 0 ;
-  border-bottom-left-radius: 0 ;
+  margin-left: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 #buttonPlain {
-  margin-right: 0 ;
-  border-top-right-radius: 0 ;
-  border-bottom-right-radius: 0 ;
-  border-right: none ;
+  margin-right: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: none;
 }
 
-#buttonFormatted:hover, #buttonPlain:hover {
+#buttonFormatted:hover,
+#buttonPlain:hover {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
   background: #ebebeb -webkit-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
   border-color: #999;
@@ -72,149 +74,153 @@ body {
   outline: 0;
 }
 
-
 #jsonpOpener,
 #jsonpCloser {
-  padding: 4px 0 0 8px ;
-  color: black ;
-  margin-bottom: -6px ;
+  padding: 4px 0 0 8px;
+  color: black;
+  margin-bottom: -6px;
 }
 
 #jsonpCloser {
-  margin-top: 0 ;
+  margin-top: 0;
 }
 
 #formattedJson {
-  padding-left: 28px ;
-  padding-top: 6px ;
+  padding-left: 28px;
+  padding-top: 6px;
 }
 pre {
-  padding: 36px 5px 5px 5px ;
+  padding: 36px 5px 5px 5px;
 }
 
-
 .kvov {
-  display: block ;
-  padding-left: 20px ;
-  margin-left: -20px ;
-  position: relative ;
+  display: block;
+  padding-left: 20px;
+  margin-left: -20px;
+  position: relative;
 }
 
 .collapsed {
-  white-space: nowrap ;
-  &> .blockInner  {
-    display: none ; 
+  white-space: nowrap;
+  & > .blockInner {
+    display: none;
   }
-  &> .ell:after  {
-    content: "…" ; 
-    font-weight: bold ;
+  & > .ell:after {
+    content: '…';
+    font-weight: bold;
   }
-  &> .ell {
-    margin: 0 4px ;
-    color: #888 ;
+  & > .ell {
+    margin: 0 4px;
+    color: #888;
   }
   .kvov {
-    display: inline ;
+    display: inline;
   }
 }
 
 .e {
-  width: 20px ;
-  height: 18px ;
-  display: block ;
-  position: absolute ;
-  left: -2px ;
-  top: 1px ;
-  z-index: 5 ;
-  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAD1JREFUeNpiYGBgOADE%2F3Hgw0DM4IRHgSsDFOzFInmMAQnY49ONzZRjDFiADT7dMLALiE8y4AGW6LoBAgwAuIkf%2F%2FB7O9sAAAAASUVORK5CYII%3D") ;
-  background-repeat: no-repeat ;
-  background-position: center center; 
-  display: block ;
-  opacity: 0.15 ;
+  width: 20px;
+  height: 18px;
+  display: block;
+  position: absolute;
+  left: -2px;
+  top: 1px;
+  z-index: 5;
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAD1JREFUeNpiYGBgOADE%2F3Hgw0DM4IRHgSsDFOzFInmMAQnY49ONzZRjDFiADT7dMLALiE8y4AGW6LoBAgwAuIkf%2F%2FB7O9sAAAAASUVORK5CYII%3D');
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: block;
+  opacity: 0.15;
   // -webkit-transition: -webkit-transform 0.05s linear ;
 
   .collapsed > & {
-    -webkit-transform: rotate(-90deg) ;
-    width: 18px ;
-    height: 20px ;
-    
-    left: 0px ;
-    top: 0px ;
+    -webkit-transform: rotate(-90deg);
+    width: 18px;
+    height: 20px;
+
+    left: 0px;
+    top: 0px;
   }
 
   &:hover {
-    opacity: 0.35 ;
+    opacity: 0.35;
   }
   &:active {
-    opacity: 0.5 ;
+    opacity: 0.5;
   }
 
   /* .e that are *inside* the children of a collapsed one */
   .collapsed .kvov & {
-    display: none ;
+    display: none;
   }
 }
 
 .blockInner {
-  display: block ;
-  padding-left: 24px ;
-  border-left: 1px dotted #bbb ;
-  margin-left: 2px ; 
+  display: block;
+  padding-left: 24px;
+  border-left: 1px dotted #bbb;
+  margin-left: 2px;
 }
-
 
 /* SYNTAX HIGHLIGHTING */
 
-  #formattedJson, #jsonpOpener, #jsonpCloser {
-    color: #333 ;
-    font: 13px/18px monospace ;
-  }
+#formattedJson,
+#jsonpOpener,
+#jsonpCloser {
+  color: #333;
+  font: 13px/18px monospace;
+}
 
-  #formattedJson {
-    color: #444 ;
-  }
-  .b /* Bracket/brace */ {
-    font-weight: bold ;
-  }
-  .s {
-    color: #0B7500 ;
-    word-wrap: break-word; 
-  }
-  a:link, a:visited {
-    text-decoration: none ;
-    color: inherit ;
-  }
-  a:hover, a:active {
-    text-decoration: underline ;
-    color: #050 ;
-  }
-  .bl, .nl, .n { /* bool, null, number */
-    font-weight: bold ;
-    color: #1A01CC ;
-  }
-  .k { /* key */
-    color: black ;
-  }
+#formattedJson {
+  color: #444;
+}
+.b /* Bracket/brace */ {
+  font-weight: bold;
+}
+.s {
+  color: #0b7500;
+  word-wrap: break-word;
+}
+a:link,
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover,
+a:active {
+  text-decoration: underline;
+  color: #050;
+}
+.bl,
+.nl,
+.n {
+  /* bool, null, number */
+  font-weight: bold;
+  color: #1a01cc;
+}
+.k {
+  /* key */
+  color: black;
+}
 
 #formattingMsg {
-  font: 13px "Lucida Grande", "Segoe UI", "Tahoma" ;
-  padding: 10px 0 0 8px ;
-  margin: 0 ;
-  color: #333 ;
+  font: 13px 'Lucida Grande', 'Segoe UI', 'Tahoma';
+  padding: 10px 0 0 8px;
+  margin: 0;
+  color: #333;
 }
-  #formattingMsg > svg {
-    margin: 0 7px ;
-    position: relative ;
-    top: 1px ;
-  }
-
+#formattingMsg > svg {
+  margin: 0 7px;
+  position: relative;
+  top: 1px;
+}
 
 /* Misc */
 [hidden] {
   display: none !important ;
 }
 span {
-  white-space: pre-wrap ;
+  white-space: pre-wrap;
 }
 
 /* Spinner */
@@ -227,7 +233,7 @@ span {
   }
 }
 #spinner {
-  -webkit-animation: spin 2s 0 infinite ;
+  -webkit-animation: spin 2s 0 infinite;
 }
 
 * {
